<resources>
    <string name="app_name">BillBuddy</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string-array name="currency">
        <item>VND</item>
        <item>USD</item>
        <item>EUR</item>
    </string-array>
    <string-array name="split_type_options">
        <item>Equally</item>
        <item>Custom</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>