<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="32dp"
    android:paddingBottom="16dp"
    tools:context=".views.authentication.AddUserInfo">

    <FrameLayout
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/kavoon"
            android:text="BillBuddy"
            android:textColor="@color/primary"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/user_form_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="@font/inter_regular"
            android:text="Cancel"
            android:textColor="@color/blue"
            android:layout_gravity="end|center_vertical"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>


    <TextView
        android:id="@+id/user_info_form_heading_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/archivo_variable"
        android:text="Add Information."
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/user_info_form_heading_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/archivo_variable"
        android:text="Help us get to know you better!"
        android:textColor="@color/text_gray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <!-- Avatar Section -->

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@drawable/layout_circle_image_profile"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person_icon">

        <ImageView
            android:id="@+id/user_form_avatar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="Group Image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_icon"
            android:visibility="gone" />

        <TextView
            android:id="@+id/user_form_avatar_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="C"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="36sp"
            android:textStyle="bold" />
    </FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/archivo_variable"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sign_up_name_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:height="40dp"
        android:background="@color/text_field_background_color"
        android:drawableStart="@drawable/person_icon"
        android:drawablePadding="8dp"
        android:drawableTint="@color/black"
        android:fontFamily="@font/archivo_variable"
        android:hint="@string/enter_your_name"
        android:padding="8dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/archivo_variable"
        android:text="@string/phone_number"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/sign_up_phone_text_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:height="40dp"
        android:background="@color/text_field_background_color"
        android:drawableStart="@drawable/call_icon"
        android:drawablePadding="8dp"
        android:drawableTint="@color/black"
        android:fontFamily="@font/archivo_variable"
        android:hint="@string/enter_your_phone_number"
        android:inputType="phone"
        android:padding="8dp"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signup_confirm_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/primary"
        android:paddingVertical="12dp"
        android:text="Submit"
        android:textColor="@color/white"
        app:cornerRadius="8dp" />

</LinearLayout>